styling & structure cleanup
I moved around the home page layout, I think it looks better in this order. I created a fixed navbar with navbar.ejs and navbar-2.ejs. I also created a custom CSS file and properly included all the above in header.ejs. Will be doing more work on the home page in the AM.

--- a/node-mysql-crud-app/views/partials/header.ejs
+++ b/node-mysql-crud-app/views/partials/header.ejs
@@ -1,26 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Required Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="/assets/css/custom.css">-->
-    <title><%= title %></title>
-</head>
-<style>
-    .table-wrapper {
-        margin-top: 50px;
-    }
 
-    .add-recipe-form {
-        margin-top: 50px;
-    }
-</style>
-<body>
-<div class="page-wrapper">
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1" ><a href="/">Elite Recipes</a></span>
-        <a class="float-right" href="/add" title="Add a New Recipe">Add a Recipe</a>
-    </nav>
+    <!--Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/main.css">
+
+    <title><%= title %></title>
+
+</head>
