--- a/node-mysql-crud-app/views/add-player.ejs
+++ b/node-mysql-crud-app/views/add-player.ejs
@@ -1,4 +1,6 @@
 <% include partials/header.ejs %>
+<% include partials/navbar-2.ejs %>
+
     <div class="container">
         <% if (message != '') { %>
             <p class="text-center text-danger"><%= message %></p>
@@ -6,7 +8,7 @@
         <form class="add-recipe-form" action="" method="post" enctype="multipart/form-data">
             <div class="form-row">
                 <div class="form-group col-md-4">
-                    <input type="text" class="form-control" name="Name" id="Name" placeholder="recipe id" required>
+                    <input type="text" class="form-control" name="Name" id="Name" placeholder="Recipe ID" required>
                 </div>
                 <div class="form-group col-md-4">
                     <input type="text" class="form-control" name="title" id="title" placeholder="Recipe Title" required>
