--- a/node-mysql-crud-app/views/edit-player.ejs
+++ b/node-mysql-crud-app/views/edit-player.ejs
@@ -1,4 +1,6 @@
 <% include partials/header.ejs %>
+<% include partials/navbar-2.ejs %>
+
 <div class="container">
     <% if (message) { %>
         <p class="text-center text-danger"><%= message %></p>
