--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -15,11 +15,11 @@
                 </div>
 
                 <div class="col m-2">
-                  <img class="img-fluid rounded-circle" src="images/Chefs.jpeg" alt="placeholder" />
+                  <img class="img-fluid rounded-circle" src="images/Kitchen.jpeg" alt="placeholder" />
                 </div>
 
                 <div class="col m-2">
-                    <img class="img-fluid rounded-circle" src="images/Kitchen.jpeg" alt="placeholder" />
+                    <img class="img-fluid rounded-circle" src="images/Chef.jpeg" alt="placeholder" />
                 </div>
             </div>
 
@@ -96,7 +96,7 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img style="height=200px;width=200px;" class="d-block w-100" src="images/Turkey.jpeg" alt="First slide">
+                    <img style="width=200px;" class="d-block w-100" src="images/Turkey.jpeg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h4 style="color:#EEF1EF;background-color:#5E6572">Classic Holiday Turkey </h4>
                     </div>
