--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -55,38 +55,42 @@
         
 
     <!-- DONT CHANGE BELOW CODE YET, The above code displays a table of recipes -->
-    <div class="table-wrapper">
-        <% if (recipes > 0) {%>
-            <table class="table table-hovered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Name</th>
-                        <th scope="col">Value.title</th>
-                        <th scope="col">Value.ingredients</th>
-                        <th scope="col">Value.instructions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% recipes.forEach((recipes, index) => { %>
-                        <tr>
-                            <th scope="row"><%= recipes.Name %></th>
-                            <td><%= recipes.Value.title %></td>
-                            <td><%= recipes.Value.ingredients %></td>
-                            <td><%= recipes.Value.instructions %></td>
-                            <td>
-                                <a href="/edit/<%= recipes.id %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit</a>
-                                <a href="/delete/<%= recipes.id %>" class="btn btn-sm btn-danger">Delete</a>
-                            </td>
-                        </tr>
-                    <% }) %>
-                </tbody>
-            </table>
-       <% } else { %>
-            <p class="text-center">No recipes found. Go <a href="/add" >here</a> to add recipe.</p>
-        <% } %>
-    </div>
-    <!-- DONT CHANGE ABOVE CODE YET, The above code displays a table of recipes -->
+    <div class="container">
+	    <div class="table-wrapper">
+	        <% if (recipes > 0) {%>
+	            <table class="table table-hovered">
+	                <thead class="thead-dark">
+	                    <tr>
+	                        <th scope="col">Name</th>
+	                        <th scope="col">Value.title</th>
+	                        <th scope="col">Value.ingredients</th>
+	                        <th scope="col">Value.instructions</th>
+	                    </tr>
+	                </thead>
+	                <tbody>
+	                    <% recipes.forEach((recipes, index) => { %>
+	                        <tr>
+	                            <th scope="row"><%= recipes.Name %></th>
+	                            <td><%= recipes.Value.title %></td>
+	                            <td><%= recipes.Value.ingredients %></td>
+	                            <td><%= recipes.Value.instructions %></td>
+	                            <td>
+	                                <a href="/edit/<%= recipes.id %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit</a>
+	                                <a href="/delete/<%= recipes.id %>" class="btn btn-sm btn-danger">Delete</a>
+	                            </td>
+	                        </tr>
+	                    <% }) %>
+	                </tbody>
+	            </table>
+	       <% } else { %>
+	            <p class="text-center">No recipes found. Go <a href="/add" >here</a> to add recipe.</p>
+	        <% } %>
+	    </div>
 
+		<hr>
+
+	</div>
+	<!-- DONT CHANGE ABOVE CODE YET, The above code displays a table of recipes -->
 
 
     <!-- Carousel -->
