--- a/node-mysql-crud-app/public/css/main.css
+++ b/node-mysql-crud-app/public/css/main.css
@@ -21,7 +21,7 @@ body h1, h2, h3, h4{
     color: #A9B4C2;
  }
 
- .img-fluid {
+ #circles {
     height:100% !important;
     width:300px !important;
  }
