--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -10,7 +10,7 @@
             <h1 class="display-4">Elite Recipes.<br>The future of cooking.</h1>
 
             <div class="row">
-                <div class="col m-2">
+                <div class="col m-2" id="circles">
                    <img class="img-fluid rounded-circle" src="images/Family.jpeg" alt="placeholder" />
                 </div>
 
