--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -14,11 +14,11 @@
                    <img class="img-fluid rounded-circle" src="images/Family.jpeg" alt="placeholder" />
                 </div>
 
-                <div class="col m-2">
+                <div class="col m-2" id="circles">
                   <img class="img-fluid rounded-circle" src="images/Kitchen.jpeg" alt="placeholder" />
                 </div>
 
-                <div class="col m-2">
+                <div class="col m-2" id="circles">
                     <img class="img-fluid rounded-circle" src="images/Chef.jpeg" alt="placeholder" />
                 </div>
             </div>
@@ -100,21 +100,21 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                    <img style="width=200px;" class="d-block w-100" src="images/Turkey.jpeg" alt="First slide">
+                    <img class="d-block w-100" src="images/Turkey.jpeg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h4 style="color:#EEF1EF;background-color:#5E6572">Classic Holiday Turkey </h4>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                    <img style="width=200px;" class="d-block w-100" src="images/SlicedHam.jpeg" alt="Second slide">
+                    <img class="d-block w-100" src="images/SlicedHam.jpeg" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h4 style="color:#EEF1EF;background-color:#5E6572">Smoked Honey Ham</h4>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                    <img style="width=200px;" class="d-block w-100" src="images/ChristmasCookies.jpeg" alt="Third slide">
+                    <img class="d-block w-100" src="images/ChristmasCookies.jpeg" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h4 style="color:#EEF1EF;background-color:#5E6572">Christmas Sugar Cookies </h4>
                     </div>
@@ -140,7 +140,7 @@
         <section class="mb-4" id="about">
             <div class="container">
 
-                <br><br>
+                <br><br><br>
                 <h1 class="display-4">About Us</h1>
                 <hr>
                     
