tab link adjustmet

--- a/node-mysql-crud-app/views/partials/navbar.ejs
+++ b/node-mysql-crud-app/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
 
     	<ul class="nav nav-pills">
 		  	<li class="nav-item">
-		    	<a class="nav-link" href="#search">Home</a>
+		    	<a class="nav-link" href="/">Home</a>
 		  	</li>
 		 	<li class="nav-item">
 		    	<a class="nav-link" href="#about">About</a>
