--- a/node-mysql-crud-app/public/css/main.css
+++ b/node-mysql-crud-app/public/css/main.css
@@ -52,8 +52,18 @@ body h1, h2, h3, h4{
     border-radius: 0px !important;
 }
 
+#share {
+    padding-top: 55px;
+    padding-bottom: 20px;
+}
+
 .jumbotron h1 {
-    color: #465366
+    color: #465366;
+}
+
+.jumbotron h4 {
+    color: #7D98A1;
+    font-weight: 300;
 }
 
 .jumbotron .btn {
