--- a/node-mysql-crud-app/views/add-player.ejs
+++ b/node-mysql-crud-app/views/add-player.ejs
@@ -1,30 +1,71 @@
 <% include partials/header.ejs %>
 <% include partials/navbar-2.ejs %>
 
-    <div class="container">
+    <!-- Header -->
+    <section class="jumbotron mt-4" id="share">
+
         <% if (message != '') { %>
             <p class="text-center text-danger"><%= message %></p>
         <% } %>
-        <form class="add-recipe-form" action="" method="post" enctype="multipart/form-data">
+
+        <div class="container">
+            <div class="row justify-content-center">
+                <h1 class="text-center">What's cookin', good lookin'?</h1>
+            </div>
+            <div class="row justify-content-center">
+                <h4 class="text-center">Upload your recipe here!</h4>
+            </div>
+
+    </section>
+    <! -- End Header ->
+    
+
+    <!-- Form -->
+    <div class="container">
+
+        <form class="add-recipe-form" action="method="post" enctype="multipart/form-data" id="addRecipe">
+
+            <!-- Row 1 -->
             <div class="form-row">
                 <div class="form-group col-md-4">
                     <input type="text" class="form-control" name="Name" id="Name" placeholder="Recipe ID" required>
                 </div>
-                <div class="form-group col-md-4">
+
+                <div class="form-group col-md-8">
                     <input type="text" class="form-control" name="title" id="title" placeholder="Recipe Title" required>
                 </div>
-                <div class="form-group col-md-4">
+            </div>
+            <!-- End Row 1 -->
+
+
+            <!-- Row 2 -->
+            <div class="form-row">
+                <div class="form-group col">
                     <input type="text" class="form-control" name="ingredients" id="ingredients" placeholder="Ingredients" required>
                 </div>
             </div>
+            <!-- End Row 2 -->
+
+
+            <!-- Row 3 -->
             <div class="form-row">
-                <div class="form-group col-md-6">
+                <div class="form-group col">
                     <input type="text" class="form-control" name="instructions" id="instructions" placeholder="Instructions" required>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary float-right">Add Recipe</button>
+            <!-- End Row 3 -->
+
+
+            <!-- Row 4 -->
+            <div class="form-row justify-content-center">
+                <button type="submit" class="btn btn-primary float-right">Add Recipe</button>
+            </div>
+            <!-- End Row 4 -->
+
         </form>
+        <!-- End Form -->
     </div>
-</div>
+    <!-- End Container -->
+
 </body>
 </html>
