--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -96,7 +96,15 @@
     <!-- Carousel -->
     <div class="container">
 
-        <div id="carouselFood" class="carousel slide" data-ride="carousel">
+    <img src="images/Turkey.jpeg" style="float: left; width: 30%; margin-right: 3%; margin-bottom: 0.5em;" width="200" height="200">
+    <img src="images/SlicedHam.jpeg" style="float: left; width: 30%; margin-right: 3%; margin-bottom: 0.5em;"width="200" height="200">
+    <img src="images/ChristmasCookies.jpeg" style="float: left; width: 30%; margin-right: 3%; margin-bottom: 0.5em;"width="200" height="200">
+
+    <p style="clear: both;">
+
+    <p> <font size="+1"; color="#7D98A1";> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Holiday Turkey &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   Hickery Honey Ham &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp   Christmas Sugar Cookies </font> </p>
+
+        <!-- <div id="carouselFood" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
@@ -131,7 +139,7 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-        </div>
+        </div> -->
         <!-- End Carousel -->
     </div>
     <!-- End Container -->       
