--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -11,15 +11,15 @@
 
             <div class="row">
                 <div class="col m-2" id="circles">
-                   <img class="img-fluid rounded-circle" src="images/Family.jpeg" alt="placeholder" />
+                   <img class="img-fluid rounded-circle" src="images/Family.jpeg" alt="family" />
                 </div>
 
                 <div class="col m-2" id="circles">
-                  <img class="img-fluid rounded-circle" src="images/Kitchen.jpeg" alt="placeholder" />
+                  <img class="img-fluid rounded-circle" src="images/Kitchen.jpeg" alt="kitcken" />
                 </div>
 
                 <div class="col m-2" id="circles">
-                    <img class="img-fluid rounded-circle" src="images/Chef.jpeg" alt="placeholder" />
+                    <img class="img-fluid rounded-circle" src="images/Chef.jpeg" alt="chef" />
                 </div>
             </div>
 
@@ -93,17 +93,33 @@
 	<!-- DONT CHANGE ABOVE CODE YET, The above code displays a table of recipes -->
 
 
-    <!-- Carousel -->
+    <!-- Image Section -->
     <div class="container">
+        <div class="row justify-content-center" id="images">
 
-    <img src="images/Turkey.jpeg" style="float: left; width: 30%; margin-right: 3%; margin-bottom: 0.5em;" width="200" height="200">
-    <img src="images/SlicedHam.jpeg" style="float: left; width: 30%; margin-right: 3%; margin-bottom: 0.5em;"width="200" height="200">
-    <img src="images/ChristmasCookies.jpeg" style="float: left; width: 30%; margin-right: 3%; margin-bottom: 0.5em;"width="200" height="200">
+            <div class="col m-2">
+                <img class="img-fluid" src="images/Turkey.jpeg" alt="turkey">
+                <h1 class="display-4 text-center mt-2" style="font-size:20px">Holiday Turkey</h1>
+            </div>
 
-    <p style="clear: both;">
+            <div class="col m-2">
+                <img class="img-fluid" src="images/SlicedHam.jpeg" alt="turkey">
+                <h1 class="display-4 text-center mt-2" style="font-size:20px">Hickery Honey Ham</h1>
+            </div>
 
-    <p> <font size="+1"; color="#7D98A1";> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Holiday Turkey &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   Hickery Honey Ham &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp   Christmas Sugar Cookies </font> </p>
+            <div class="col m-2">
+                <img class="img-fluid" src="images/ChristmasCookies.jpeg" alt="turkey">
+                <h1 class="display-4 text-center mt-2" style="font-size:20px">Christmas Sugar Cookies</h1>
+            </div>
 
+        </div>
+        <hr>
+    </div>
+    <!-- End Image Section -->
+    
+
+    <!-- Carousel commented out. Try to fix at another time 
+    <div class="container">
         <!-- <div id="carouselFood" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
 
@@ -139,16 +155,18 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-        </div> -->
+        </div>
         <!-- End Carousel -->
     </div>
-    <!-- End Container -->       
+    <!-- End Container -->     
+     
                 
+
     <!-- About -->   
         <section class="mb-4" id="about">
             <div class="container">
 
-                <br><br><br>
+                <br><br>
                 <h1 class="display-4">About Us</h1>
                 <hr>
                     
@@ -158,7 +176,7 @@
                         </div>
 
                         <div class="col">
-                            <img class="img-fluid my-2" src="images/Cooking.jpeg" alt="placeholder" />
+                            <img class="img-fluid my-2" src="images/Cooking.jpeg" alt="cooking" />
                         </div>
                     </div>
                 <br><br>
@@ -169,7 +187,7 @@
 
                     <div class="row">
                         <div class="col text-center">
-                            <img class="img-fluid rounded-circle" src="images/Michael.jpeg" alt="placeholder" /> 
+                            <img class="img-fluid rounded-circle" src="images/Michael.jpeg" alt="michael" /> 
                         </div>
 
                         <div class="col align-self-center">
@@ -182,7 +200,7 @@
 
                     <div class="row">
                         <div class="col text-center">
-                            <img class="img-fluid rounded-circle" src="images/Haley.jpeg" alt="placeholder" /> 
+                            <img class="img-fluid rounded-circle" src="images/Haley.jpeg" alt="haley" /> 
                         </div>
 
                         <div class="col align-self-center">
@@ -195,7 +213,7 @@
 
                     <div class="row">
                         <div class="col text-center">
-                            <img class="img-fluid rounded-circle" src="images/BrookeLynn.jpeg" alt="placeholder" /> 
+                            <img class="img-fluid rounded-circle" src="images/BrookeLynn.jpeg" alt="brookelynn" /> 
                         </div>
 
                         <div class="col align-self-center">
