--- a/node-mysql-crud-app/views/index.ejs
+++ b/node-mysql-crud-app/views/index.ejs
@@ -41,10 +41,7 @@
 
             <div class="row justify-content-center">
                 <form method="get" action="/signup">
-                        <button class="btn btn-lg btn-secondary mr-2">Sign Up</button>
-                </form>
-                <form method="get" action="/signin">
-                        <button class="btn btn-lg btn-secondary">Sign In</button>
+                        <button class="btn btn-lg btn-secondary">Sign Up</button>
                 </form>
             </div>
 
