--- a/node-mysql-crud-app/views/partials/navbar.ejs
+++ b/node-mysql-crud-app/views/partials/navbar.ejs
@@ -1,19 +1,32 @@
 <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
 
-    	<a class="navbar-brand" href="/">Elite Recipes</a>
+    	<div class="navbar-header">
+    		<a class="navbar-brand" href="/">Elite Recipes</a>
+    	</div>
 
-    	<ul class="nav nav-pills">
-		  	<li class="nav-item">
-		    	<a class="nav-link" href="/">Home</a>
-		  	</li>
-		 	<li class="nav-item">
-		    	<a class="nav-link" href="#about">About</a>
-		  	</li>
-		  	<li class="nav-item">
-		    	<a class="nav-link" href="/add">Add a Recipe</a>
-		  	</li>
-		</ul>
+    	<div class="col">
+
+			<ul class="nav nav-pills">
+				<li class="nav-item">
+					<a class="nav-link" href="/">Home</a>
+				</li>
+
+				<li class="nav-item">
+					<a class="nav-link" href="#about">About</a>
+				</li>
+			</ul>
+		</div>
+
+		<form class="form-inline" method="post" action="/login">
+			<div class="form-group">
+				<label class="sr-only" for="emailInput">Email</label>
+				<input id="emailInput" name="email" class="form-control-sm mr-2" type="email" placeholder="Email" aria-label="Email" required />
+
+				<label class="sr-only" for="passwordInput">Password</label>
+				<input id="passwordInput" name="password" class="form-control-sm mr-2" type="password" placeholder="Password" aria-label="Password" required />
+				<button class="btn btn-sm" id="login-btn" type="submit">Login</button>
+			</div>
+		</form>
 
 	</nav>
-
