--- a/node-mysql-crud-app/views/partials/navbar2.ejs
+++ b/node-mysql-crud-app/views/partials/navbar2.ejs
@@ -4,7 +4,7 @@
     	<a class="navbar-brand" href="/">Elite Recipes</a>
 
           <div class="navbar-nav">
-              <form class="form-inline" method="get" action="/logout">
+              <form class="form-inline" method="get" action="/">
                   <div class="form-group ml-4">
                       <button class="btn btn-sm" id="logout-btn">Logout</button>
                   </div>
