--- a/node-mysql-crud-app/views/partials/header.ejs
+++ b/node-mysql-crud-app/views/partials/header.ejs
@@ -14,6 +14,6 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css">
 
-    <title><%= title %></title>
+    <title>Elite Recipes</title>
 
 </head>
