--- a/node-mysql-crud-app/views/edit-player.ejs
+++ b/node-mysql-crud-app/views/edit-player.ejs
@@ -2,7 +2,7 @@
 <% include partials/navbar2.ejs %>
 
 <div class="container">
-    <% if (message) { %>
+    <% if (message != '') { %>
         <p class="text-center text-danger"><%= message %></p>
     <% } %>
 
